# django-polyfield

./: .gitignore  LICENSE  README.rst  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  test_settings.py  tox.ini
django_polyfield/: __init__.py  _dictable.py  _fields.py  _list.py  _postgres_lookups.py  _utils.py  postgres.py  serialization.py
testapp_polyfield_basic/: animals.py  models.py  serializers.py
testapp_polyfield_basic/migrations/: 0001_initial.py
testapp_polyfield_pg/: models.py
testapp_polyfield_pg/migrations/: 0001_initial.py
tests/: test_basics.py  test_dictable.py  test_form_usage.py  test_list_attr.py  test_list_usage.py  test_pickling.py  test_postgres.py  test_serializers.py
