[metadata]
name = django-polyfield
version = 0.1.0.post+gitver
description = Django Polyfield
long_description = file: README.rst
keywords = django, polymorphic, field, json
url = https://github.com/suutari/django-polyfield
author = Tuomas Suutari
author_email = tuomas@nepnep.net
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    django>=1.8,<2
    setuptools-gitver~=1.0

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,dist,venv
max-complexity = 10

[isort]
multi_line_output=4
skip=.tox,dist,venv
not_skip=__init__.py
known_first_party=django_polyfield
known_third_party=django,mock,pytest,six

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_settings

[coverage:run]
branch = True
